# siphon

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  GETTING_STARTED.md  Makefile  README.md  VISION.md  install.sh
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: rust.yml  typescript.yml
docs/: UI_OPTIONS.md
scripts/: check.sh  test-install.sh
services/: com.siphon.daemon.plist  siphon-daemon.service
siphon-cli/: README.md  biome.json  package-lock.json  package.json
siphon-cli/src/: analyzer.ts  cli.ts  export.ts  generate.ts  templates.ts  types.ts
siphon-cli/src/collectors/: browser.ts  git.ts  shell.ts
siphon-cli/src/commands/: capture.ts  digest.ts  export.ts  insights.ts  status.ts  summary.ts
siphon-daemon/: Cargo.toml  README.md
siphon-daemon/hooks/: siphon-hook.bash  siphon-hook.fish  siphon-hook.zsh
siphon-daemon/src/: api.rs  clipboard.rs  ctl.rs  dedup.rs  hotkey.rs  idle.rs  main.rs  meeting.rs  redact.rs  storage.rs  summary.rs  triggers.rs  watcher.rs  window.rs
siphon-nvim/: README.md
siphon-nvim/lua/siphon/: init.lua
siphon-nvim/plugin/: siphon.lua
siphon-ui/: app.js  index.html  style.css
