[package]
name = "siphon-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for Siphon - passive activity capture"
license = "MIT"
repository = "https://github.com/siphon-dev/siphon"

[[bin]]
name = "siphon-daemon"
path = "src/main.rs"

[[bin]]
name = "siphon-ctl"
path = "src/ctl.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching (for future)
notify = "6"

# CLI for siphon-ctl
clap = { version = "4", features = ["derive"] }

# HTTP client for ctl
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Directories
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
